# mkvinfo

./: README.md  pyproject.toml
.github/workflows/: docs.yml  lint-and-type-check.yml  release.yml  tests.yml
docs/: index.md
scripts/: typegen.py
src/mkvinfo/: __init__.py  _types.py  _utils.py
